syntax = "proto3";

package resource;

import "common.proto";

option java_package = "app.mosia.nexus.integration.grpc";
option java_multiple_files = true;

// Service for managing and querying cluster resources
service ResourceService {
  // Gets the status of available GPUs
  rpc GetGPUStatus(common.Empty) returns (GPUStatus);

  // Lists all active simulation sessions
  rpc ListActiveSessions(common.Empty) returns (SessionList);

  // Force-releases resources for a specific session
  rpc ReleaseResources(ReleaseResourcesRequest) returns (ReleaseResourcesResponse);
}

// Status of one or more GPUs
message GPUStatus {
  message GPU {
    int32 id = 1;
    string name = 2;
    float utilization = 3; // 0-100
    int64 memory_total_mb = 4;
    int64 memory_used_mb = 5;
    int32 temperature = 6;
    int32 power_usage_watts = 7;
  }

  repeated GPU gpus = 1;
}

// List of active sessions
message SessionList {
  repeated string session_ids = 1;
  map<string, common.SessionStatus> statuses = 2;
}

// Request to release resources
message ReleaseResourcesRequest {
  string session_id = 1;
}

message ReleaseResourcesResponse {
  bool success = 1;
  string message = 2;
}
